# idunn

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: ABOUT.md  ADVANCED.md  classes.md
examples/: __init__.py  basic_usage.py
examples/orchard/: __init__.py  adapters.py  ports.py
idunn/: __init__.py
idunn/app/: __init__.py  decorators.py  idunn.py
idunn/domain/: __init__.py  adapter_declaration.py  adapter_metadata.py  errors.py  lifecycle_enum.py  port_binding.py  registration_key.py  report.py
idunn/internal/: __init__.py  auto_discovery.py  decorator_support.py  inversion_mapper.py  inversion_resolver.py  inversion_validator.py
idunn/util/: __init__.py  dependency_analyzer.py  dependency_console_formatter.py  dependency_json_formatter.py  environment.py  meta_singleton.py  qualified_name.py
tests/: _support.py  conftest.py  test_architecture.py  test_describe.py  test_environment.py  test_injection.py  test_invert.py  test_mapper_cache.py  test_public_surface.py  test_registration.py
