[project]
name = "idunn"
authors = [{ name = "Steven Miers", email = "steven.miers@gmail.com" }]
readme = "README.md"
version = "0.0.2"
description = "A tiny constructor-time dependency inversion toolkit for Python."
license = "MIT"
packages = [{ include = "idunn"}]
keywords = ["dependency-injection", "inversion-of-control", "ioc", "decorators", "protocols"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/terracoil/idunn/blob/master/README.md"
Repository = "https://github.com/terracoil/idunn"
Documentation = "https://github.com/terracoil/idunn/blob/main/docs/README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pytest-cov = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<10.0"
ruff = ">=0.8,<1.0"
mypy = ">=1.13,<3.0"
freyja = "^2.0.2"
poetry-dynamic-versioning =">=1.9.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "idunn"
files = ["idunn", "tests", "examples"]

[tool.pytest.ini_options]
cache_dir = "tmp/.pytest_cache"
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
